--- a/1.html
+++ b/1.html
@@ -7,7 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>main</h1>
-        <h2>main</h2>
+        <h1>cong viec 1</h1>
     </body>
 </html>
